@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+27-Apr-2010 Christophe Demko
+# Fixed [#18561] Ftp find path and verify setting in installation
+
 27-Apr-2010 Andrew Eddie
  # Fixed [#20223] Custom Code in Banner system is not saved / not used.
 
